--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -12,56 +12,56 @@ concurrency:
   group: CosmosDbConnect
   cancel-in-progress: false
 jobs:
-  regular70:
-    strategy:
-      max-parallel: 2
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET 8
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 8.0.x
-    - name: Setup .NET 7
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 7.0.x
-    - name: Secret Settings
-      run: |
-        pushd ./tests/Sekiban.Test.Abstructs
-        dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
-        dotnet user-secrets set "ConnectionStrings:SekibanPostgresDefault" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_DEFAULT}}"
-        dotnet user-secrets set "ConnectionStrings:SekibanPostgresSecondary" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_SECONDARY}}"
-        dotnet user-secrets set "Sekiban:Default:Azure:CosmosDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Azure:CosmosDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
-        dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "jjga_items"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "jjga_events"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "jjga_d_items"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "jjga_d_events"
-        dotnet user-secrets set "Sekiban:Default:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Default:Aws:S3BucketName" "jjga-s3"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoRegion" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTable" "jjga_items_2"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTable" "jjga_events_2"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
-    - name: Restore dependencies
-      run: |
-        dotnet restore Sekiban.sln
-    - name: Test dotnet
-      run: |
-        dotnet test Sekiban.sln  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net7.0
-    # - uses: mktcode/consecutive-workflow-action@v1
-    #   with:
-    #     token: ${{ secrets.GITHUB_TOKEN }}
+  # regular70:
+  #   strategy:
+  #     max-parallel: 2
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Setup .NET 8
+  #     uses: actions/setup-dotnet@v1
+  #     with:
+  #       dotnet-version: 8.0.x
+  #   - name: Setup .NET 7
+  #     uses: actions/setup-dotnet@v1
+  #     with:
+  #       dotnet-version: 7.0.x
+  #   - name: Secret Settings
+  #     run: |
+  #       pushd ./tests/Sekiban.Test.Abstructs
+  #       dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
+  #       dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
+  #       dotnet user-secrets set "ConnectionStrings:SekibanPostgresDefault" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_DEFAULT}}"
+  #       dotnet user-secrets set "ConnectionStrings:SekibanPostgresSecondary" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_SECONDARY}}"
+  #       dotnet user-secrets set "Sekiban:Default:Azure:CosmosDatabase" "GithubActions"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Azure:CosmosDatabase" "GithubActions"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "jjga_items"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "jjga_events"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "jjga_d_items"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "jjga_d_events"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:S3Region" "us-west-1"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:S3BucketName" "jjga-s3"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoRegion" "us-west-1"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTable" "jjga_items_2"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTable" "jjga_events_2"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+  #   - name: Restore dependencies
+  #     run: |
+  #       dotnet restore Sekiban.sln
+  #   - name: Test dotnet
+  #     run: |
+  #       dotnet test Sekiban.sln  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net7.0
+  #   # - uses: mktcode/consecutive-workflow-action@v1
+  #   #   with:
+  #   #     token: ${{ secrets.GITHUB_TOKEN }}
   regular80:
     strategy:
       max-parallel: 2
@@ -72,10 +72,6 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 8.0.x
-    - name: Setup .NET 7
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 7.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -118,17 +114,13 @@ jobs:
       max-parallel: 4
 
     runs-on: ubuntu-latest
-    needs: [ regular70, regular80 ]
+    needs: [ regular80 ]
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET 8
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 8.0.x
-    - name: Setup .NET 7
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 7.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -170,35 +162,35 @@ jobs:
     #   with:
     #     token: ${{ secrets.GITHUB_TOKEN }}
 
-  performance70:
-    strategy:
-      max-parallel: 4
+  # performance70:
+  #   strategy:
+  #     max-parallel: 4
 
-    runs-on: ubuntu-latest
-    needs: [ flaky ]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET 8
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 8.0.x
-    - name: Setup .NET 7
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 7.0.x
-    - name: Secret Settings
-      run: |
-        pushd ./tests/Sekiban.Test.Abstructs
-        dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-        dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
-        dotnet user-secrets set "Sekiban:Default:Azure:CosmosDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Azure:CosmosDatabase" "GithubActions"
-    - name: Restore dependencies
-      run: |
-        dotnet restore Sekiban.sln
-    - name: Test dotnet
-      run: |
-        dotnet test tests/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net7.0
+  #   runs-on: ubuntu-latest
+  #   needs: [ flaky ]
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Setup .NET 8
+  #     uses: actions/setup-dotnet@v1
+  #     with:
+  #       dotnet-version: 8.0.x
+  #   - name: Setup .NET 7
+  #     uses: actions/setup-dotnet@v1
+  #     with:
+  #       dotnet-version: 7.0.x
+  #   - name: Secret Settings
+  #     run: |
+  #       pushd ./tests/Sekiban.Test.Abstructs
+  #       dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
+  #       dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
+  #       dotnet user-secrets set "Sekiban:Default:Azure:CosmosDatabase" "GithubActions"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Azure:CosmosDatabase" "GithubActions"
+  #   - name: Restore dependencies
+  #     run: |
+  #       dotnet restore Sekiban.sln
+  #   - name: Test dotnet
+  #     run: |
+  #       dotnet test tests/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net7.0
 
   performance80:
     strategy:
@@ -212,10 +204,6 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 8.0.x
-    - name: Setup .NET 7
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 7.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -230,49 +218,49 @@ jobs:
       run: |
         dotnet test tests/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net8.0
 
-  performance70dynamo:
-    strategy:
-      max-parallel: 4
+  # performance70dynamo:
+  #   strategy:
+  #     max-parallel: 4
 
-    runs-on: ubuntu-latest
-    needs: [ flaky ]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET 8
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 8.0.x
-    - name: Setup .NET 7
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 7.0.x
-    - name: Secret Settings
-      run: |
-        pushd ./tests/Sekiban.Test.Abstructs
-        dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
-        dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "jjga_items"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "jjga_events"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "jjga_d_items"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "jjga_d_events"
-        dotnet user-secrets set "Sekiban:Default:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Default:Aws:S3BucketName" "jjga-s3"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoRegion" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTable" "jjga_items_2"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTable" "jjga_events_2"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
-    - name: Restore dependencies
-      run: |
-        dotnet restore Sekiban.sln
-    - name: Test dotnet
-      run: |
-        dotnet test tests/Sekiban.Test.Dynamo/Sekiban.Test.Dynamo.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net7.0
+  #   runs-on: ubuntu-latest
+  #   needs: [ flaky ]
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Setup .NET 8
+  #     uses: actions/setup-dotnet@v1
+  #     with:
+  #       dotnet-version: 8.0.x
+  #   - name: Setup .NET 7
+  #     uses: actions/setup-dotnet@v1
+  #     with:
+  #       dotnet-version: 7.0.x
+  #   - name: Secret Settings
+  #     run: |
+  #       pushd ./tests/Sekiban.Test.Abstructs
+  #       dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "jjga_items"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "jjga_events"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "jjga_d_items"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "jjga_d_events"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:S3Region" "us-west-1"
+  #       dotnet user-secrets set "Sekiban:Default:Aws:S3BucketName" "jjga-s3"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoRegion" "us-west-1"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTable" "jjga_items_2"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTable" "jjga_events_2"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
+  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+  #   - name: Restore dependencies
+  #     run: |
+  #       dotnet restore Sekiban.sln
+  #   - name: Test dotnet
+  #     run: |
+  #       dotnet test tests/Sekiban.Test.Dynamo/Sekiban.Test.Dynamo.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net7.0
 
   performance80dynamo:
     strategy:
@@ -286,10 +274,6 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 8.0.x
-    - name: Setup .NET 7
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 7.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -318,33 +302,33 @@ jobs:
       run: |
         dotnet test tests/Sekiban.Test.Dynamo/Sekiban.Test.Dynamo.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net8.0
 
-  performance70postgres:
-    strategy:
-      max-parallel: 4
+  # performance70postgres:
+  #   strategy:
+  #     max-parallel: 4
 
-    runs-on: ubuntu-latest
-    needs: [ flaky ]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET 8
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 8.0.x
-    - name: Setup .NET 7
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 7.0.x
-    - name: Secret Settings
-      run: |
-        pushd ./tests/Sekiban.Test.Abstructs
-        dotnet user-secrets set "ConnectionStrings:SekibanPostgresDefault" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_DEFAULT}}"
-        dotnet user-secrets set "ConnectionStrings:SekibanPostgresSecondary" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_SECONDARY}}"
-    - name: Restore dependencies
-      run: |
-        dotnet restore Sekiban.sln
-    - name: Test dotnet
-      run: |
-        dotnet test tests/Sekiban.Test.Postgres/Sekiban.Test.Postgres.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net7.0
+  #   runs-on: ubuntu-latest
+  #   needs: [ flaky ]
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Setup .NET 8
+  #     uses: actions/setup-dotnet@v1
+  #     with:
+  #       dotnet-version: 8.0.x
+  #   - name: Setup .NET 7
+  #     uses: actions/setup-dotnet@v1
+  #     with:
+  #       dotnet-version: 7.0.x
+  #   - name: Secret Settings
+  #     run: |
+  #       pushd ./tests/Sekiban.Test.Abstructs
+  #       dotnet user-secrets set "ConnectionStrings:SekibanPostgresDefault" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_DEFAULT}}"
+  #       dotnet user-secrets set "ConnectionStrings:SekibanPostgresSecondary" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_SECONDARY}}"
+  #   - name: Restore dependencies
+  #     run: |
+  #       dotnet restore Sekiban.sln
+  #   - name: Test dotnet
+  #     run: |
+  #       dotnet test tests/Sekiban.Test.Postgres/Sekiban.Test.Postgres.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net7.0
       
   performance80postgres:
     strategy:
@@ -358,10 +342,6 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 8.0.x
-    - name: Setup .NET 7
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 7.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
