--- a/src/Sekiban.Web/Sekiban.Web.csproj
+++ b/src/Sekiban.Web/Sekiban.Web.csproj
@@ -5,13 +5,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <OutputType>Library</OutputType>
         <PackageId>Sekiban.Web</PackageId>
-        <Version>0.20.3</Version>
+        <Version>0.20.4</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework WebHelper</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.20.3</PackageVersion>
-        <Description>Web Authorization Check become async Task</Description>
+        <PackageVersion>0.20.4</PackageVersion>
+        <Description>Improve type checking rule</Description>
         <TargetFramework>net8.0</TargetFramework>
         <LangVersion>preview</LangVersion>
         <OpenApiGenerateDocuments>false</OpenApiGenerateDocuments>
