--- a/tests/fsCustomerTest/fsCustomerTest.fsproj
+++ b/tests/fsCustomerTest/fsCustomerTest.fsproj
@@ -21,10 +21,11 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="coverlet.collector" Version="6.0.0">
+        <PackageReference Include="coverlet.collector" Version="6.0.2">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Update="FSharp.Core" Version="8.0.301" />
     </ItemGroup>
 
 
